# se-interview

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY.md  README.md  agent.py  pyproject.toml
artifacts/: evaluation_summary.json  frustrated_interactions.json  query_runs.json  root_spans.json  spans.csv  spans.json  tool_usage_evaluations.json  user_frustration_evaluations.json
backend/: .env.example  Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
backend/artifacts/: boundary_embedding_space.json  evaluation_summary.json  frustrated_interactions.json  query_runs.json  root_spans.json  spans.csv  spans.json  tool_usage_evaluations.json  user_frustration_evaluations.json
backend/evals/: boundary_prompt_corpus.json
backend/scripts/: export_and_evaluate.py  run_boundary_tests.py
backend/src/travel_assistant/: __init__.py  api.py  config.py  demo_data.py  graph.py  query_loader.py  schemas.py  tools.py
backend/tests/: test_api.py
docs/: presentation.md  production_architecture.md
docs/slides-dist/: index.html
docs/slides-src/: index.html  package.json  tsconfig.json
evals/: query_corpus.json  tool_usage.py
frontend/: Caddyfile  Dockerfile  README.md  package-lock.json  package.json  railway.json
frontend/src/: app.css  app.d.ts  app.html
presentation/: README.md  design_decisions.md  presentation.md
presentation/slides-dist/: index.html
presentation/slides-src/: Caddyfile  (+4 more)
scripts/: export_and_evaluate.py  run_queries.py
tests/: test_api.py  test_evaluators.py  test_tools.py
(+61 files in other folders)
